sherry/http/httpclient_parser.rl.cc

#line 1 "httpclient_parser.rl"
/**
*
* Copyright (c) 2010, Zed A. Shaw and Mongrel2 Project Contributors.
* All rights reserved.
* 
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are
* met:
* 
*     * Redistributions of source code must retain the above copyright
*       notice, this list of conditions and the following disclaimer.
* 
*     * Redistributions in binary form must reproduce the above copyright
*       notice, this list of conditions and the following disclaimer in the
*       documentation and/or other materials provided with the distribution.
* 
*     * Neither the name of the Mongrel2 Project, Zed A. Shaw, nor the names
*       of its contributors may be used to endorse or promote products
*       derived from this software without specific prior written
*       permission.
* 
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
* IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
* THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
* PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
* CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
* EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
* PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
* PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
* LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
* NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
* SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

#include "httpclient_parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>
#include <cerrno>
// #include "dbg.h"

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M,FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)

#define check(A, M, ...) if(!(A)) { /*log_err(M, ##__VA_ARGS__);*/ errno=0; goto error; }

/** machine **/

#line 157 "httpclient_parser.rl"


/** Data **/

static const int httpclient_parser_start = 1;
static const int httpclient_parser_first_final = 120;
static const int httpclient_parser_error = 0;

static const int httpclient_parser_en_main = 1;

static const char _httpclient_parser_nfa_targs[] = {
	0, 0
};

static const char _httpclient_parser_nfa_offsets[] = {
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0
};

static const char _httpclient_parser_nfa_push_actions[] = {
	0, 0
};

static const char _httpclient_parser_nfa_pop_trans[] = {
	0, 0
};


#line 161 "httpclient_parser.rl"


int httpclient_parser_init(httpclient_parser *parser)  {
	int cs = 0;
	
	
	{
		cs = (int)httpclient_parser_start;
	}
	
	#line 166 "httpclient_parser.rl"
	
	
	parser->cs = cs;
	parser->body_start = 0;
	parser->content_len = -1;
	parser->chunked = 0;
	parser->chunks_done = 0;
	parser->mark = 0;
	parser->nread = 0;
	parser->field_len = 0;
	parser->field_start = 0;    
	parser->close = 0;
	
	return(1);
}


/** exec **/
int httpclient_parser_execute(httpclient_parser *parser, const char *buffer, size_t len, size_t off)  
{
	const char *p, *pe;
	int cs = parser->cs;
	
	assert(off <= len && "offset past end of buffer");
	
	p = buffer+off;
	pe = buffer+len;
	
	assert(*pe == '\0' && "pointer does not end on NUL");
	assert(pe - p == (int)len - (int)off && "pointers aren't same distance");
	
	
	
	{
		if ( p == pe )
		goto _test_eof;
		switch ( cs )
		{
			case 1:
			goto st_case_1;
			case 0:
			goto st_case_0;
			case 2:
			goto st_case_2;
			case 120:
			goto st_case_120;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 46:
			goto st_case_46;
			case 47:
			goto st_case_47;
			case 48:
			goto st_case_48;
			case 49:
			goto st_case_49;
			case 50:
			goto st_case_50;
			case 51:
			goto st_case_51;
			case 52:
			goto st_case_52;
			case 53:
			goto st_case_53;
			case 54:
			goto st_case_54;
			case 55:
			goto st_case_55;
			case 56:
			goto st_case_56;
			case 57:
			goto st_case_57;
			case 58:
			goto st_case_58;
			case 59:
			goto st_case_59;
			case 60:
			goto st_case_60;
			case 61:
			goto st_case_61;
			case 62:
			goto st_case_62;
			case 63:
			goto st_case_63;
			case 64:
			goto st_case_64;
			case 65:
			goto st_case_65;
			case 66:
			goto st_case_66;
			case 67:
			goto st_case_67;
			case 68:
			goto st_case_68;
			case 69:
			goto st_case_69;
			case 70:
			goto st_case_70;
			case 71:
			goto st_case_71;
			case 121:
			goto st_case_121;
			case 72:
			goto st_case_72;
			case 73:
			goto st_case_73;
			case 74:
			goto st_case_74;
			case 75:
			goto st_case_75;
			case 76:
			goto st_case_76;
			case 77:
			goto st_case_77;
			case 78:
			goto st_case_78;
			case 79:
			goto st_case_79;
			case 80:
			goto st_case_80;
			case 81:
			goto st_case_81;
			case 82:
			goto st_case_82;
			case 83:
			goto st_case_83;
			case 84:
			goto st_case_84;
			case 85:
			goto st_case_85;
			case 86:
			goto st_case_86;
			case 87:
			goto st_case_87;
			case 88:
			goto st_case_88;
			case 122:
			goto st_case_122;
			case 89:
			goto st_case_89;
			case 90:
			goto st_case_90;
			case 91:
			goto st_case_91;
			case 92:
			goto st_case_92;
			case 93:
			goto st_case_93;
			case 94:
			goto st_case_94;
			case 95:
			goto st_case_95;
			case 96:
			goto st_case_96;
			case 97:
			goto st_case_97;
			case 98:
			goto st_case_98;
			case 99:
			goto st_case_99;
			case 100:
			goto st_case_100;
			case 101:
			goto st_case_101;
			case 102:
			goto st_case_102;
			case 103:
			goto st_case_103;
			case 104:
			goto st_case_104;
			case 105:
			goto st_case_105;
			case 106:
			goto st_case_106;
			case 107:
			goto st_case_107;
			case 108:
			goto st_case_108;
			case 109:
			goto st_case_109;
			case 110:
			goto st_case_110;
			case 111:
			goto st_case_111;
			case 112:
			goto st_case_112;
			case 113:
			goto st_case_113;
			case 114:
			goto st_case_114;
			case 115:
			goto st_case_115;
			case 123:
			goto st_case_123;
			case 116:
			goto st_case_116;
			case 117:
			goto st_case_117;
			case 118:
			goto st_case_118;
			case 119:
			goto st_case_119;
		}
		goto st_out;
		st_case_1:
		if ( ( (*( p))) == 72 ) {
			goto ctr2;
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto ctr0;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto ctr0;
			}
		} else {
			goto ctr0;
		}
		{
			goto st0;
		}
		st_case_0:
		st0:
		cs = 0;
		goto _out;
		ctr0:
		{
			#line 54 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st2;
		st2:
		p+= 1;
		if ( p == pe )
		goto _test_eof2;
		st_case_2:
		switch( ( (*( p))) ) {
			case 10: {
				goto ctr3;
			}
			case 13: {
				goto ctr4;
			}
			case 59: {
				goto ctr6;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st2;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st2;
			}
		} else {
			goto st2;
		}
		{
			goto st0;
		}
		ctr3:
		{
			#line 95 "httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		{
			#line 111 "httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
		goto st120;
		ctr7:
		{
			#line 111 "httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
		goto st120;
		ctr9:
		{
			#line 58 "httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		{
			#line 111 "httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
		goto st120;
		ctr15:
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		{
			#line 111 "httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
		goto st120;
		ctr74:
		{
			#line 68 "httpclient_parser.rl"
			
			parser->close = 1;
		}
		{
			#line 111 "httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
		goto st120;
		st120:
		p+= 1;
		if ( p == pe )
		goto _test_eof120;
		st_case_120:
		{
			goto st0;
		}
		ctr4:
		{
			#line 95 "httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		
		goto st3;
		ctr10:
		{
			#line 58 "httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
		goto st3;
		ctr16:
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
		goto st3;
		ctr75:
		{
			#line 68 "httpclient_parser.rl"
			
			parser->close = 1;
		}
		
		goto st3;
		st3:
		p+= 1;
		if ( p == pe )
		goto _test_eof3;
		st_case_3:
		if ( ( (*( p))) == 10 ) {
			goto ctr7;
		}
		{
			goto st0;
		}
		ctr6:
		{
			#line 95 "httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		
		goto st4;
		ctr12:
		{
			#line 58 "httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
		goto st4;
		ctr18:
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
		goto st4;
		st4:
		p+= 1;
		if ( p == pe )
		goto _test_eof4;
		st_case_4:
		switch( ( (*( p))) ) {
			case 33: {
				goto ctr8;
			}
			case 124: {
				goto ctr8;
			}
			case 126: {
				goto ctr8;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto ctr8;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto ctr8;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto ctr8;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto ctr8;
				}
			} else {
				goto ctr8;
			}
		} else {
			goto ctr8;
		}
		{
			goto st0;
		}
		ctr8:
		{
			#line 56 "httpclient_parser.rl"
			MARK(field_start, p); }
		
		goto st5;
		st5:
		p+= 1;
		if ( p == pe )
		goto _test_eof5;
		st_case_5:
		switch( ( (*( p))) ) {
			case 10: {
				goto ctr9;
			}
			case 13: {
				goto ctr10;
			}
			case 33: {
				goto st5;
			}
			case 59: {
				goto ctr12;
			}
			case 61: {
				goto ctr13;
			}
			case 124: {
				goto st5;
			}
			case 126: {
				goto st5;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto st5;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto st5;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto st5;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto st5;
				}
			} else {
				goto st5;
			}
		} else {
			goto st5;
		}
		{
			goto st0;
		}
		ctr13:
		{
			#line 58 "httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st6;
		st6:
		p+= 1;
		if ( p == pe )
		goto _test_eof6;
		st_case_6:
		switch( ( (*( p))) ) {
			case 33: {
				goto ctr14;
			}
			case 124: {
				goto ctr14;
			}
			case 126: {
				goto ctr14;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto ctr14;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto ctr14;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto ctr14;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto ctr14;
				}
			} else {
				goto ctr14;
			}
		} else {
			goto ctr14;
		}
		{
			goto st0;
		}
		ctr14:
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st7;
		st7:
		p+= 1;
		if ( p == pe )
		goto _test_eof7;
		st_case_7:
		switch( ( (*( p))) ) {
			case 10: {
				goto ctr15;
			}
			case 13: {
				goto ctr16;
			}
			case 33: {
				goto st7;
			}
			case 59: {
				goto ctr18;
			}
			case 124: {
				goto st7;
			}
			case 126: {
				goto st7;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto st7;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto st7;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto st7;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto st7;
				}
			} else {
				goto st7;
			}
		} else {
			goto st7;
		}
		{
			goto st0;
		}
		ctr2:
		{
			#line 54 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st8;
		st8:
		p+= 1;
		if ( p == pe )
		goto _test_eof8;
		st_case_8:
		if ( ( (*( p))) == 84 ) {
			goto st9;
		}
		{
			goto st0;
		}
		st9:
		p+= 1;
		if ( p == pe )
		goto _test_eof9;
		st_case_9:
		if ( ( (*( p))) == 84 ) {
			goto st10;
		}
		{
			goto st0;
		}
		st10:
		p+= 1;
		if ( p == pe )
		goto _test_eof10;
		st_case_10:
		if ( ( (*( p))) == 80 ) {
			goto st11;
		}
		{
			goto st0;
		}
		st11:
		p+= 1;
		if ( p == pe )
		goto _test_eof11;
		st_case_11:
		if ( ( (*( p))) == 47 ) {
			goto st12;
		}
		{
			goto st0;
		}
		st12:
		p+= 1;
		if ( p == pe )
		goto _test_eof12;
		st_case_12:
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto st13;
		}
		{
			goto st0;
		}
		st13:
		p+= 1;
		if ( p == pe )
		goto _test_eof13;
		st_case_13:
		if ( ( (*( p))) == 46 ) {
			goto st14;
		}
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto st13;
		}
		{
			goto st0;
		}
		st14:
		p+= 1;
		if ( p == pe )
		goto _test_eof14;
		st_case_14:
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto st15;
		}
		{
			goto st0;
		}
		st15:
		p+= 1;
		if ( p == pe )
		goto _test_eof15;
		st_case_15:
		if ( ( (*( p))) == 32 ) {
			goto ctr26;
		}
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto st15;
		}
		{
			goto st0;
		}
		ctr26:
		{
			#line 90 "httpclient_parser.rl"
			
			if(parser->http_version != NULL)
			parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
		}
		
		goto st16;
		st16:
		p+= 1;
		if ( p == pe )
		goto _test_eof16;
		st_case_16:
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto ctr27;
		}
		{
			goto st0;
		}
		ctr27:
		{
			#line 54 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st17;
		st17:
		p+= 1;
		if ( p == pe )
		goto _test_eof17;
		st_case_17:
		if ( ( (*( p))) == 32 ) {
			goto ctr28;
		}
		if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
			goto st17;
		}
		{
			goto st0;
		}
		ctr28:
		{
			#line 83 "httpclient_parser.rl"
			
			parser->status = strtol(PTR_TO(mark), NULL, 10);
			
			if(parser->status_code != NULL)
			parser->status_code(parser->data, PTR_TO(mark), LEN(mark, p));
		}
		
		goto st18;
		st18:
		p+= 1;
		if ( p == pe )
		goto _test_eof18;
		st_case_18:
		if ( ( (*( p))) == 10 ) {
			goto st0;
		}
		{
			goto ctr30;
		}
		ctr30:
		{
			#line 54 "httpclient_parser.rl"
			MARK(mark, p); }
		
		goto st19;
		st19:
		p+= 1;
		if ( p == pe )
		goto _test_eof19;
		st_case_19:
		switch( ( (*( p))) ) {
			case 10: {
				goto ctr32;
			}
			case 13: {
				goto ctr33;
			}
		}
		{
			goto st19;
		}
		ctr45:
		{
			#line 72 "httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
		goto st20;
		ctr32:
		{
			#line 78 "httpclient_parser.rl"
			
			if(parser->reason_phrase != NULL)
			parser->reason_phrase(parser->data, PTR_TO(mark), LEN(mark, p));
		}
		
		goto st20;
		ctr42:
		{
			#line 62 "httpclient_parser.rl"
			MARK(mark, p); }
		{
